force-app/main/default/objects/Contact/fields/OtherLanguages__c.field-meta.xml
<CustomField>
    <fullName>OtherLanguages__c</fullName>
    <description>Other languages the contact communicates in</description>
    <label>Alternate Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>