force-app/main/default/objects/Contact/fields/ParticipationAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>ParticipationAgreementReceived__c</fullName>
    <description>The date the most recent version of Participant Agreement was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Participation Agreement</label>
    <type>Date</type>
</CustomField>