force-app/main/default/objects/Contact/fields/PEC_Address1__c.field-meta.xml
<CustomField>
    <fullName>PEC_Address1__c</fullName>
    <label>PEC Address1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>