force-app/main/default/objects/Contact/fields/PEC_Address2__c.field-meta.xml
<CustomField>
    <fullName>PEC_Address2__c</fullName>
    <label>PEC Address2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>