force-app/main/default/objects/Contact/fields/PEC_City__c.field-meta.xml
<CustomField>
    <fullName>PEC_City__c</fullName>
    <label>PEC City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>