force-app/main/default/objects/Contact/fields/PEC_Country__c.field-meta.xml
<CustomField>
    <fullName>PEC_Country__c</fullName>
    <label>PEC Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>