force-app/main/default/objects/Contact/fields/PEC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PEC_First_Name__c</fullName>
    <label>PEC First Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>