force-app/main/default/objects/Contact/fields/PEC_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>PEC_Home_Phone__c</fullName>
    <label>PEC Home Phone</label>
    <type>Phone</type>
</CustomField>