force-app/main/default/objects/Contact/fields/PEC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PEC_Last_Name__c</fullName>
    <label>PEC Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>