force-app/main/default/objects/Contact/fields/PEC_MI__c.field-meta.xml
<CustomField>
    <fullName>PEC_MI__c</fullName>
    <label>PEC MI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>