force-app/main/default/objects/Contact/fields/PEC_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>PEC_Mobile_Number__c</fullName>
    <label>PEC Mobile Number</label>
    <type>Phone</type>
</CustomField>