force-app/main/default/objects/Contact/fields/PEC_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>PEC_Other_Phone__c</fullName>
    <label>PEC Other Phone</label>
    <type>Phone</type>
</CustomField>