force-app/main/default/objects/Contact/fields/PEC_Relatiion_Ship__c.field-meta.xml
<CustomField>
    <fullName>PEC_Relatiion_Ship__c</fullName>
    <label>PEC Relatiion Ship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>