force-app/main/default/objects/Contact/fields/PEC_State__c.field-meta.xml
<CustomField>
    <fullName>PEC_State__c</fullName>
    <label>PEC State</label>
    <length>35</length>
    <type>Text</type>
</CustomField>