force-app/main/default/objects/Contact/fields/PEC_Suffix__c.field-meta.xml
<CustomField>
    <fullName>PEC_Suffix__c</fullName>
    <label>PEC Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>