force-app/main/default/objects/Contact/fields/PEC_Zip__c.field-meta.xml
<CustomField>
    <fullName>PEC_Zip__c</fullName>
    <label>PEC Zip Code</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>