force-app/main/default/objects/Contact/fields/Phone_EC__c.field-meta.xml
<CustomField>
    <fullName>Phone_EC__c</fullName>
    <description>phone number for their emergency contact</description>
    <label>Phone (EC)</label>
    <type>Phone</type>
</CustomField>