force-app/main/default/objects/Contact/fields/Preferred_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronoun__c</fullName>
    <label>Preferred Pronoun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>He</fullName>
            </value>
            <value>
                <fullName>She</fullName>
            </value>
            <value>
                <fullName>They</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>