force-app/main/default/objects/Contact/fields/Preferred_Pronoun_Other__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronoun_Other__c</fullName>
    <label>Preferred Pronoun (Other)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>