force-app/main/default/objects/Contact/fields/PreferredName__c.field-meta.xml
<CustomField>
    <fullName>PreferredName__c</fullName>
    <description>Contact Preferred Name</description>
    <inlineHelpText>This defaults to the contact&apos;s first name, and will be filled in as such if left empty.</inlineHelpText>
    <label>Preferred Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>