force-app/main/default/objects/Contact/fields/Primary_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Emergency_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Emergency Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Primary Emergency Contact)</relationshipLabel>
    <relationshipName>PEC</relationshipName>
    <type>Lookup</type>
</CustomField>