force-app/main/default/objects/Contact/fields/Pronoun__c.field-meta.xml
<CustomField>
    <fullName>Pronoun__c</fullName>
    <label>Pronoun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pronouns</valueSetName>
    </valueSet>
</CustomField>