force-app/main/default/objects/Contact/fields/Pronoun_Other__c.field-meta.xml
<CustomField>
    <fullName>Pronoun_Other__c</fullName>
    <label>Pronoun (Other)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>