force-app/main/default/objects/Contact/fields/PronounOther__c.field-meta.xml
<CustomField>
    <fullName>PronounOther__c</fullName>
    <label>Specified Pronoun</label>
    <length>128</length>
    <type>Text</type>
</CustomField>