force-app/main/default/objects/Contact/fields/Provision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Provision_Notes__c</fullName>
    <description>Notes related to provisioning an account.</description>
    <label>Provision Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>