force-app/main/default/objects/Contact/fields/PuppyApplicationReceived__c.field-meta.xml
<CustomField>
    <fullName>PuppyApplicationReceived__c</fullName>
    <description>The date the most recent version of Puppy Raiser Application was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Puppy Raiser Application</label>
    <type>Date</type>
</CustomField>