force-app/main/default/objects/Contact/fields/PuppyCertAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>PuppyCertAgreementReceived__c</fullName>
    <description>The date the most recent version of Puppy Raiser Certification Agreement was uploaded</description>
    <label>Last Puppy Raiser Cert Agreement</label>
    <type>Date</type>
</CustomField>