force-app/main/default/objects/Contact/fields/PuppyContactFormReceived__c.field-meta.xml
<CustomField>
    <fullName>PuppyContactFormReceived__c</fullName>
    <description
    >The date the most recent version of Puppy Raiser Contact Form was uploaded</description>
    <label>Last Puppy Contact Form</label>
    <type>Date</type>
</CustomField>