force-app/main/default/objects/Contact/fields/PuppyContractReceived__c.field-meta.xml
<CustomField>
    <fullName>PuppyContractReceived__c</fullName>
    <description>The date the most recent version of Puppy Raiser Contract was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Puppy Raiser Contract</label>
    <type>Date</type>
</CustomField>