force-app/main/default/objects/Contact/fields/PuppyInfrNoticeReceived__c.field-meta.xml
<CustomField>
    <fullName>PuppyInfrNoticeReceived__c</fullName>
    <description
    >The date the most recent version of Puppy Raiser Infraction Notice was uploaded</description>
    <label>Last Puppy Infraction Notice</label>
    <type>Date</type>
</CustomField>