force-app/main/default/objects/Contact/fields/PuppyProgAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>PuppyProgAgreementReceived__c</fullName>
    <description
    >The date the most recent version of Puppy Raiser Program Agreement was uploaded</description>
    <label>Last Puppy Program Agreement</label>
    <type>Date</type>
</CustomField>