force-app/main/default/objects/Contact/fields/PuppyReferenceReceived__c.field-meta.xml
<CustomField>
    <fullName>PuppyReferenceReceived__c</fullName>
    <description>The date the most recent version of Puppy Raiser Reference Letter was uploaded</description>
    <label>Last Puppy Raiser Reference Letter</label>
    <type>Date</type>
</CustomField>