force-app/main/default/objects/Contact/fields/RaceEthnicity__c.field-meta.xml
<CustomField>
    <fullName>RaceEthnicity__c</fullName>
    <label>Race/Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian or Asian American</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Hispanic, Latinx, or Spanish origin</fullName>
            </value>
            <value>
                <fullName>Middle Eastern or North African</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Pacific Islander</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Another race or ethnicity not listed</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>