force-app/main/default/objects/Contact/fields/Referral_Details__c.field-meta.xml
<CustomField>
    <fullName>Referral_Details__c</fullName>
    <label>Referral Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>