force-app/main/default/objects/Contact/fields/SEC__c.field-meta.xml
<CustomField>
    <fullName>SEC__c</fullName>
    <label>SEC Relationship To Client</label>
    <length>50</length>
    <type>Text</type>
</CustomField>