force-app/main/default/objects/Contact/fields/SEC_City__c.field-meta.xml
<CustomField>
    <fullName>SEC_City__c</fullName>
    <label>SEC City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>