force-app/main/default/objects/Contact/fields/SEC_Email__c.field-meta.xml
<CustomField>
    <fullName>SEC_Email__c</fullName>
    <label>SEC Email</label>
    <type>Email</type>
</CustomField>