force-app/main/default/objects/Contact/fields/SEC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>SEC_First_Name__c</fullName>
    <label>SEC First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>