force-app/main/default/objects/Contact/fields/SEC_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>SEC_Home_Phone__c</fullName>
    <label>SEC Home Phone</label>
    <type>Phone</type>
</CustomField>