force-app/main/default/objects/Contact/fields/SEC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>SEC_Last_Name__c</fullName>
    <label>SEC Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>