force-app/main/default/objects/Contact/fields/SEC_MI__c.field-meta.xml
<CustomField>
    <fullName>SEC_MI__c</fullName>
    <label>SEC MI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>