force-app/main/default/objects/Contact/fields/SEC_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>SEC_Mobile_Phone__c</fullName>
    <label>SEC Mobile Phone</label>
    <type>Phone</type>
</CustomField>