force-app/main/default/objects/Contact/fields/SEC_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>SEC_Other_Phone__c</fullName>
    <label>SEC Other Phone</label>
    <type>Phone</type>
</CustomField>