force-app/main/default/objects/Contact/fields/SEC_Suffix__c.field-meta.xml
<CustomField>
    <fullName>SEC_Suffix__c</fullName>
    <label>SEC Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>