force-app/main/default/objects/Contact/fields/SEC_Zip__c.field-meta.xml
<CustomField>
    <fullName>SEC_Zip__c</fullName>
    <label>SEC Zip</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>