force-app/main/default/objects/Contact/fields/Secondary_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Emergency_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Emergency Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Secondary Emergency Contact)</relationshipLabel>
    <relationshipName>SEC</relationshipName>
    <type>Lookup</type>
</CustomField>