force-app/main/default/objects/Contact/fields/SexualOrientation__c.field-meta.xml
<CustomField>
    <fullName>SexualOrientation__c</fullName>
    <label>Sexual Orientation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asexual</fullName>
            </value>
            <value>
                <fullName>Bisexual</fullName>
            </value>
            <value>
                <fullName>Heterosexual/straight</fullName>
            </value>
            <value>
                <fullName>Homosexual/gay/lesbian</fullName>
            </value>
            <value>
                <fullName>Queer</fullName>
            </value>
            <value>
                <fullName>Prefer to self-describe</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>