force-app/main/default/objects/Contact/fields/ShareStaff__c.field-meta.xml
<CustomField>
    <fullName>ShareStaff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share this contact with users in the Staff group</description>
    <label>Share With Staff</label>
    <type>Checkbox</type>
</CustomField>