force-app/main/default/objects/Contact/fields/ShareTeam__c.field-meta.xml
<CustomField>
    <fullName>ShareTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share this contact with users in the Team group</description>
    <label>Share With Team</label>
    <type>Checkbox</type>
</CustomField>