force-app/main/default/objects/Contact/fields/ShareTSiM__c.field-meta.xml
<CustomField>
    <fullName>ShareTSiM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share this contact with users in the TSiM group</description>
    <label>Share With TSiM</label>
    <type>Checkbox</type>
</CustomField>