force-app/main/default/objects/Contact/fields/ShareWithBoard__c.field-meta.xml
<CustomField>
    <fullName>ShareWithBoard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share this contact with users in the Board group</description>
    <label>Share With Board</label>
    <type>Checkbox</type>
</CustomField>