force-app/main/default/objects/Contact/fields/ShareWithPuppyRaiser__c.field-meta.xml
<CustomField>
    <fullName>ShareWithPuppyRaiser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share this contact with users in the Puppy Raiser group</description>
    <label>Share With Puppy Raiser</label>
    <type>Checkbox</type>
</CustomField>