force-app/main/default/objects/Contact/fields/ShareWithStaff__c.field-meta.xml
<CustomField>
    <fullName>ShareWithStaff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share this contact with users in the Staff group</description>
    <label>Share With Staff</label>
    <type>Checkbox</type>
</CustomField>