force-app/main/default/objects/Contact/fields/ShareWithStandalonePrograms__c.field-meta.xml
<CustomField>
    <fullName>ShareWithStandalonePrograms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share this contact with users in the Standalone Programs group</description>
    <label>Share With Standalone Programs</label>
    <type>Checkbox</type>
</CustomField>