force-app/main/default/objects/Contact/fields/ShareWithTrainer__c.field-meta.xml
<CustomField>
    <fullName>ShareWithTrainer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share this contact with users in the Trainer group</description>
    <label>Share With Trainer</label>
    <type>Checkbox</type>
</CustomField>