force-app/main/default/objects/Contact/fields/ShareWithVolunteer__c.field-meta.xml
<CustomField>
    <fullName>ShareWithVolunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share this contact with users in the Volunteer group</description>
    <label>Share With Volunteer</label>
    <type>Checkbox</type>
</CustomField>