force-app/main/default/objects/Contact/fields/ShirtSize__c.field-meta.xml
<CustomField>
    <fullName>ShirtSize__c</fullName>
    <label>Shirt Size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child S</fullName>
            </value>
            <value>
                <fullName>Child M</fullName>
            </value>
            <value>
                <fullName>Child L</fullName>
            </value>
            <value>
                <fullName>Women XS</fullName>
            </value>
            <value>
                <fullName>Women S</fullName>
            </value>
            <value>
                <fullName>Women M</fullName>
            </value>
            <value>
                <fullName>Women L</fullName>
            </value>
            <value>
                <fullName>Women XL</fullName>
            </value>
            <value>
                <fullName>Women XXL</fullName>
            </value>
            <value>
                <fullName>Men XS</fullName>
            </value>
            <value>
                <fullName>Men S</fullName>
            </value>
            <value>
                <fullName>Men M</fullName>
            </value>
            <value>
                <fullName>Men L</fullName>
            </value>
            <value>
                <fullName>Men XL</fullName>
            </value>
            <value>
                <fullName>Men XXL</fullName>
            </value>
            <value>
                <fullName>Unisex XS</fullName>
            </value>
            <value>
                <fullName>Unisex S</fullName>
            </value>
            <value>
                <fullName>Unisex M</fullName>
            </value>
            <value>
                <fullName>Unisex L</fullName>
            </value>
            <value>
                <fullName>Unisex XL</fullName>
            </value>
            <value>
                <fullName>Unisex XXL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>