force-app/main/default/objects/Contact/fields/SpecifiedAbilityAccommodation__c.field-meta.xml
<CustomField>
    <fullName>SpecifiedAbilityAccommodation__c</fullName>
    <label>Specified Ability Accommodation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>