force-app/main/default/objects/Contact/fields/SpecifiedAbilityStatus__c.field-meta.xml
<CustomField>
    <fullName>SpecifiedAbilityStatus__c</fullName>
    <label>Specified Ability Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>