force-app/main/default/objects/Contact/fields/SpecifiedGenderIdentity__c.field-meta.xml
<CustomField>
    <fullName>SpecifiedGenderIdentity__c</fullName>
    <label>Specified Gender Identity</label>
    <length>60</length>
    <type>Text</type>
</CustomField>