force-app/main/default/objects/Contact/fields/SpecifiedRaceEthnicity__c.field-meta.xml
<CustomField>
    <fullName>SpecifiedRaceEthnicity__c</fullName>
    <label>Specified Race/Ethnicity</label>
    <length>128</length>
    <type>Text</type>
</CustomField>