force-app/main/default/objects/Contact/fields/SpecifiedSexualOrientation__c.field-meta.xml
<CustomField>
    <fullName>SpecifiedSexualOrientation__c</fullName>
    <label>Specified Sexual Orientation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>