force-app/main/default/objects/Contact/fields/SpecifiedVeteranStatus__c.field-meta.xml
<CustomField>
    <fullName>SpecifiedVeteranStatus__c</fullName>
    <label>Specified Veteran Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>