force-app/main/default/objects/Contact/fields/StaffAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>StaffAgreementReceived__c</fullName>
    <description
    >The date the most recent version of Staff Agreement was uploaded</description>
    <label>Last Staff Agreement</label>
    <type>Date</type>
</CustomField>