force-app/main/default/objects/Contact/fields/StaffApplicationReceived__c.field-meta.xml
<CustomField>
    <fullName>StaffApplicationReceived__c</fullName>
    <description>The date the most recent version of Staff Application was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Application</label>
    <type>Date</type>
</CustomField>