force-app/main/default/objects/Contact/fields/StaffFirstAidReceived__c.field-meta.xml
<CustomField>
    <fullName>StaffFirstAidReceived__c</fullName>
    <description>The date the most recent version of Staff First Aid Certification was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Staff First Aid Certificate</label>
    <type>Date</type>
</CustomField>