force-app/main/default/objects/Contact/fields/StaffI9Received__c.field-meta.xml
<CustomField>
    <fullName>StaffI9Received__c</fullName>
    <description
    >The date the most recent version of Staff I9 was uploaded</description>
    <label>Last Staff I9</label>
    <type>Date</type>
</CustomField>