force-app/main/default/objects/Contact/fields/StaffOfferReceived__c.field-meta.xml
<CustomField>
    <fullName>StaffOfferReceived__c</fullName>
    <description
    >The date the most recent version of Staff Offer Letter was uploaded</description>
    <label>Last Staff Offer Letter</label>
    <type>Date</type>
</CustomField>