force-app/main/default/objects/Contact/fields/StaffResumeReceived__c.field-meta.xml
<CustomField>
    <fullName>StaffResumeReceived__c</fullName>
    <description>The date the most recent version of Staff Resume was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Staff Resume</label>
    <type>Date</type>
</CustomField>